<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_1">TEAM 1</string>
    <string name="team_2">TEAM 2</string>
    <string name="_0b">0</string>
    <string name="_0a">0</string>
    <string name="plusa">PLUS A</string>
    <string name="plusb">PLUS B</string>
    <string name="minusa">MINUS A</string>
    <string name="minusb">MINUS B</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="plus_button">Button Plus</string>
    <string name="minus_button">Button Minus</string>
</resources>
