<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="@dimen/hor"
    android:paddingTop="@dimen/ver"
    android:paddingLeft="@dimen/hor"
    android:paddingBottom="@dimen/ver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24pt"/>
        <ImageButton
            android:id="@+id/plus_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plusa"
            android:src="@drawable/ic_plus"
            android:onClick="increaseScore"
            android:background="@drawable/button_background"
            style="@style/PlusButtons"/>
        <TextView
            android:id="@+id/score_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0a"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="25pt"
            style="@style/ScoreText"/>
        <ImageButton
            android:id="@+id/minus_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minusa"
            android:src="@drawable/ic_minus"
            android:onClick="decreaseScore"
            android:background="@drawable/button_background"
            style="@style/MinusButtons"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24pt"/>
        <ImageButton
            android:id="@+id/plus_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_plus"
            android:onClick="increaseScore"
            android:contentDescription="@string/plusb"
            android:background="@drawable/button_background"
            style="@style/PlusButtons"/>
        <TextView
            android:id="@+id/score_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0b"
            android:gravity="center"
            android:textSize="25pt"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@style/TeamText"/>
        <ImageButton
            android:id="@+id/minus_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_minus"
            android:onClick="decreaseScore"
            android:contentDescription="@string/minusb"
            android:background="@drawable/button_background"
            style="@style/MinusButtons"/>
    </RelativeLayout>
</LinearLayout>